# async-LZW

./: CMakeLists.txt  run-tests.sh
async_encode/include/: async_lzw.hpp  async_lzw_task.hpp
async_encode/src/: async_lzw.cpp  async_lzw_task.cpp
async_engine/src/: async_tasks_pool.cpp  thread_guard.cpp
src/: main.cpp
sync_lzw/include/: lzw.hpp
tests/: test1.in  test2.in  test3.in  test4.in  test5.in  test6.in  test7.in  test8.in
universal/include/: dictionary.hpp  exec_time.hpp  file.hpp
universal/src/: dictionary.cpp  file.cpp
